--- a/mentalChatbot/templates/index.html
+++ b/mentalChatbot/templates/index.html
@@ -78,7 +78,7 @@
           <img src="{% static 'assets/img/hero-carousel/hero-carousel-2.jpg' %}" alt="">
           <div class="container">
             <h2>Welcome to EduWell</h2>
-            <p>Here we address the unique challenges of campus life and inspire meaningful solutions. From navigating academic pressure and mental health concerns to fostering inclusivity and tackling social issues, we are here to empower
+            <p style="font-size: x-large">Here we address the unique challenges of campus life and inspire meaningful solutions. From navigating academic pressure and mental health concerns to fostering inclusivity and tackling social issues, we are here to empower
                 students with the tools, stories, and resources needed to thrive. Together, let's create a supportive community that turns every obstacle into an opportunity for growth, success, and positive change. </p>
           </div>
         </div><!-- End Carousel Item -->
