--- a/mentalChatbot/static/assets/css/signup.css
+++ b/mentalChatbot/static/assets/css/signup.css
@@ -1,62 +1,65 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+/*body {*/
+/*    font-family: Arial, sans-serif;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    height: 100vh;*/
+/*}*/
 
-.container {
-    display: flex;
-    width: 800px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-}
+/*.container {*/
+/*    display: flex;*/
+/*    width: 800px;*/
+/*    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);*/
+/*    border-radius: 10px;*/
+/*    overflow: hidden;*/
+/*}*/
 
-.left-panel {
-    background: linear-gradient(to bottom, #3fbbc0, #3fbbc0);
-    color: white;
-    width: 40%;
-    padding: 30px;
-    text-align: center;
-}
+/*.left-panel {*/
+/*    background: linear-gradient(to bottom, #3fbbc0, #3fbbc0);*/
+/*    color: white;*/
+/*    width: 40%;*/
+/*    padding: 30px;*/
+/*    text-align: center;*/
+/*}*/
 
-.right-panel {
-    background-color: white;
-    padding: 30px;
-    width: 60%;
-}
+/*.right-panel {*/
+/*    background-color: white;*/
+/*    padding: 30px;*/
+/*    width: 60%;*/
 
-input, button {
-    width: 100%;
-    margin-top: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+/*}*/
 
-button {
-    background-color: #3fbbc0;
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+/*input, button {*/
+/*    width: 100%;*/
+/*    margin-top: 10px;*/
+/*    padding: 10px;*/
+/*    border: 1px solid #ccc;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-button:hover {
-    background-color:#3fbbc0;
-}
+/*button {*/
+/*    background-color: #3fbbc0;*/
+/*    color: white;*/
+/*    font-size: 16px;*/
+/*    border: none;*/
+/*    cursor: pointer;*/
+/*}*/
 
-p {
-    text-align: center;
-}
+/*button:hover {*/
+/*    background-color:#3fbbc0;*/
+/*}*/
 
-a {
-    color: #3fbbc0;
-    text-decoration: none;
-}
+/*p {*/
+/*    text-align: center;*/
+/*}*/
 
-a:hover {
-    text-decoration: underline;
-}
+/*a {*/
+/*    color: #3fbbc0;*/
+/*    text-decoration: none;*/
+/*}*/
+
+/*a:hover {*/
+/*    text-decoration: underline;*/
+/*}*/
+
+
