--- a/mentalChatbot/templates/relationships.html
+++ b/mentalChatbot/templates/relationships.html
@@ -15,6 +15,7 @@
   <link href="{% static 'assets/logo.jpg' %}" rel="apple-touch-icon">
 
   <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -32,6 +33,8 @@
         <link rel="stylesheet" href="{% static 'assets/css/relationships.css' %}">
 
     <style>
+
+
   .content-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -92,7 +95,7 @@
   <main><br><br><br>
 
       <div class="content-container">
-  <p class="intro-text">
+  <p class="intro-text" style="color: white">
     In this section, we’ll explore the different aspects of relationships at university, from balancing friendships and romance with academics to building supportive social networks. We’ll share tips on maintaining healthy connections, managing conflicts, and prioritizing self-care.
     <br>
     University life is about connecting with others, but it’s also a chance to learn more about yourself. Let’s dive into how relationships can shape your journey and how to navigate them with confidence.
@@ -104,7 +107,7 @@
         <div class="card">
             <h2>💖 Healthy vs. Toxic Relationships</h2>
             <p>Understand the signs of a good or bad relationship, and learn how to set healthy boundaries.</p>
-            <button id="learnMoreBtn">Learn More</button>
+            <button style="border: none; border-radius: 5px; background-color: #3fbbc0;height: 1.2cm; color: white" id="learnMoreBtn">Learn More</button>
             <script>
                 document.getElementById("learnMoreBtn").addEventListener("click", function() {
     window.location.href = "https://www.fcs.uga.edu/docs/00_HRMET-F4.pdf";
