--- a/mentalChatbot/templates/index.html
+++ b/mentalChatbot/templates/index.html
@@ -55,6 +55,12 @@
             <li><a href="#doctors">Doctors</a></li>
 
             <li><a href="#contact">Contact</a></li>
+
+
+         {% if request.user.is_superuser %}
+            <li><a href="{% url 'clients' %}">Clients</a></li>
+                 {% endif %}
+
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
