--- a/mentalChatbot/templates/signup.html
+++ b/mentalChatbot/templates/signup.html
@@ -53,7 +53,7 @@ form input {
 {##}
 {#            </form>#}
             
-            <form id="signupForm" action="{% url 'signup' %}" method="POST">
+            <form id="signupForm" action="/signup/" method="POST">
                 {% csrf_token %}
 
                 {{ form.as_p }}
