--- a/mentalChatbot/templates/mental_illness.html
+++ b/mentalChatbot/templates/mental_illness.html
@@ -106,7 +106,7 @@
         <p>Whether you need advice, support, or just a place to share your thoughts,
             our anonymous forum allows you to connect with others without fear of judgment.
             Speak openly, support each other, and let your voice be heard!.</p>
-        <button class="forum-btn">Join Forum</button>
+        <a href="{% url 'forum' %}"><button class="forum-btn">Join Forum</button> </a>
     </section>
 
 
