landing page modification

--- a/mentalChatbot/templates/login.html
+++ b/mentalChatbot/templates/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduWell - Login</title>
-    <link rel="stylesheet" href="{% static 'assets/css/signup.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/login.css' %}">
       <link href="{% static 'assets/logo.jpg' %}" rel="icon">
 
      <style>
@@ -37,8 +37,8 @@ form input {
 <body>
     <div class="container">
         <div class="left-panel">
-{#            <h2>EduWell</h2>#}
-            <img src="{% static 'assets/img/signup.jpg' %}" alt="EduWell Image"> <!-- Insert image here -->
+            <h2>EduWell</h2>
+{#            <img src="{% static 'assets/img/signup.jpg' %}" alt="EduWell Image"> <!-- Insert image here -->#}
         </div>
         <div class="right-panel">
             <h2>Login</h2>
@@ -51,6 +51,6 @@ form input {
             <p id="message"></p>
         </div>
     </div>
-{#    <script src="script.js"></script>#}
+    <script src="script.js"></script>
 </body>
 </html>
