--- a/mentalChatbot/templates/relationships.html
+++ b/mentalChatbot/templates/relationships.html
@@ -83,7 +83,6 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="cta-btn" href="index.html#appointment">Make an Appointment</a>
 
       </div>
 
@@ -119,19 +118,19 @@
         <div class="card">
             <h2>💔 Breakups & Emotional Healing</h2>
             <p>Breakups can be tough. Find guidance on coping strategies, self-care, and moving forward.</p>
-            <a href="#">Read Tips</a>
+            <a href="https://jedfoundation.org/resource/the-painful-truth-about-breakups">Read Tips</a>
         </div>
 
         <div class="card">
             <h2>👫 Friendships & Social Support</h2>
             <p>Learn how to build strong friendships, overcome loneliness, and manage conflicts.</p>
-            <a href="#">Find Out More</a>
+            <a href="https://home.iitk.ac.in/~trc/friendship.pdf">Find Out More</a>
         </div>
 
         <div class="card">
             <h2>🧘 Dealing with Relationship Stress</h2>
             <p>Manage relationship anxiety, find balance, and know when to seek professional help.</p>
-            <a href="#">Get Help</a>
+            <a href="https://counselingcentergroup.com/coping-with-relationship-anxiety/">Get Help</a>
         </div>
     </section>
 
