--- a/mentalChatbot/templates/forum.html
+++ b/mentalChatbot/templates/forum.html
@@ -67,7 +67,7 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="cta-btn" href="index.html#appointment">Make an Appointment</a>
+        <a style="text-decoration: none" class="cta-btn" href="index.html#appointment">Make an Appointment</a>
 
       </div>
     </div>
