--- a/mentalChatbot/templates/signup.html
+++ b/mentalChatbot/templates/signup.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Mental Support - Signup</title>
-    <link rel="stylesheet" href="{% static 'assets/css/signup.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/login.css' %}">
      <style>
         body{
             background: url("{% static 'assets/img/gallery/gallery-1.jpg' %}");
@@ -65,6 +65,6 @@ form input {
             <p id="message"></p>
         </div>
     </div>
-{#    <script src="script.js"></script>#}
+    <script src="script.js"></script>
 </body>
 </html>
