--- a/mentalChatbot/templates/view_clients.html
+++ b/mentalChatbot/templates/view_clients.html
@@ -41,26 +41,29 @@
 
     <div class="branding d-flex align-items-center">
 
-      <div class="container position-relative d-flex align-items-center justify-content-end">
-        <a href="{% url 'homepage' %}" class="logo d-flex align-items-center me-auto">
-          <img src="{% static 'assets/img/logo1.png' %}" alt="">
-           <h1 class="sitename">EduWell</h1>
-        </a>
+            <div class="container position-relative d-flex align-items-center justify-content-end">
+      <a href="{% url 'homepage' %}" class="logo d-flex align-items-center me-auto">
+        <img src="{% static 'assets/img/logo1.png' %}" alt="">
+        <h1 class="sitename">EduWell</h1>
+      </a>
 
-        <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="#hero" class="active">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#departments">Departments</a></li>
-            <li><a href="#doctors">Doctors</a></li>
+            <li><a href="{% url 'homepage' %}" class="active">Home</a></li>
+            <li><a href="{% url 'relationships' %}">Relationships</a></li>
+            <li><a href="{% url 'drugs' %}">Drugs</a></li>
+            <li><a href="{% url 'mental_illness' %}">Mental Illness</a></li>
 
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
+              {% if request.user.is_staff %}
+                 <li><a href="{% url 'clients' %}">Clients</a></li>
+              {% endif %}
+
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="cta-btn" href="index.html#appointment">Make an Appointment</a>
-
+        <a class="cta-btn" href="{% url 'forum' %}">Join Discussion</a>
       </div>
 
     </div>
